add_executable(Thread_unittest Thread_unittest.cc)
target_link_libraries(Thread_unittest bingchen_base)

add_executable(BoundedBlockingQueue_test BoundedBlockingQueue_unittest.cc)
target_link_libraries(BoundedBlockingQueue_test bingchen_base)

add_executable(ThreadPool_test ThreadPool_test.cc)
target_link_libraries(ThreadPool_test bingchen_base)

add_executable(Singleton_test Singleton_test.cc)
target_link_libraries(Singleton_test bingchen_base)

add_executable(ThreadLocal_test ThreadLocal_test.cc)
target_link_libraries(ThreadLocal_test bingchen_base)
